@@ -2,19 +2,27 @@
  
 A simple Java plugin to bridge Maven and the Java ToolProvider API (java.util.spi.ToolProvider).
 
-Below is a (not particularly helpful) example of invoking the jar tool.
-The jar tools is mostly useful because it's the most generally available.
-More useful are tools such as jdeps, jlink, and jpackage.
+Below is a simple example of invoking the jar tool. More useful are tools such as jdeps, jlink, and jpackage.
 
-The following tools DO work out-of-the-box with Java 15:
+This plugin quickly and easily bridges the rich options offered
+by Maven with the core JDK tools set in the absence of full Maven plugin integration.
+While tools like jdeps, jlink, and jpackage can be wrangled with shell scripts, 
+Maven is much, much easier for working with things like classpaths and directories.
+
+The following tools work out-of-the-box with Java 15:
 
 - jmod, jar, javac, javadoc, javap, jdeps, jlink
+
+For ordinary use, you should stick with the standard Maven plugins for javac, jar, 
+and javadoc.
 
 The following tools do NOT appear to work with Java 15: 
 - jaotc, jarsigner, java, jcmd, jconsole, jdb, jdeprscan, jfr, jhsdb, jimage,
 jinfo, jps, jrunscript, jshell, jstack, jstat, jstatd, rmid, rmiregistry, serialver, jmap
 
-jpackage will ONLY work in Java 15 if you use the following JVM argument:
+## jpackage
+
+jpackage will ONLY work in Java 15 if you use the following argument when you launch the JVM:
 
 `--add-modules jdk.incubator.jpackage`
 
@@ -22,13 +30,13 @@ You can add that configuration in a variety of places depending on IDE and build
 
 In IntelliJ, for example, you might need to add it to your JUnit template.
 
-For command-line Maven on a Unix system, the easiest thing might be to 
-create a ~.mvn/jvm.config file, with the only contents the
- `--add-modules jdk.incubator.jpackage` entry.
+There are a lot of options for [configuring Maven](https://maven.apache.org/configure.html).
+The best option will likely vary depending on your situation (e.g. local dev environment, 
+CI system, etc.)
 
-That said, there are a lot of options for [configuring Maven](https://maven.apache.org/configure.html).
+jpackage is expected to move out of incubator status with the release of Java 16.
 
-# Example Plugin Configuration
+# Simple Example Plugin Configuration
 
 ```xml
 <plugin>
@@ -44,6 +52,39 @@ That said, there are a lot of options for [configuring Maven](https://maven.apac
             </goals>
             <configuration>
                 <toolName>jar</toolName>
+                <args>
+                    <arg>--version</arg>
+                </args>
+            </configuration>
+        </execution>
+    </executions>
+</plugin>
+```
+
+# Kitchen Sink
+
+Here's an example with all of the currently available configuration options.
+
+Most of the interesting configuration options are the arguments passed to
+the underlying tool.
+
+```xml
+ <plugin>
+    <groupId>io.github.wiverson</groupId>
+    <artifactId>java-tools-plugin</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <executions>
+        <execution>
+            <id>test</id>
+            <phase>test-compile</phase>
+            <goals>
+                <goal>java-tool</goal>
+            </goals>
+            <configuration>
+                <toolName>jar</toolName>
+                <writeOutputToLog>true</writeOutputToLog>
+                <writeErrorsToLog>true</writeErrorsToLog>
+                <failOnError>true</failOnError>
                 <args>
                     <arg>--version</arg>
                 </args>
